--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head>
+  <link rel="stylesheet" href="site.css">
   <title>A site about nothing</title>
 </head>
 
