--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="site.css">
+  <link rel="stylesheet" href="/css/site.css">
   <title>A site about nothing</title>
 </head>
 
