--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <body>
 <h1>A website about nothing?</h1>
+<a href="#">><img src="images/nothing.jpg" alt="image" height="100%" /><a/>
+
 
 </body>
 </html>
