--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 <body>
 <h1>A website about nothing?</h1>
-<a href="#">><img src="images/nothing.jpg" alt="image" height="100%" /><a/>
+<div style="text-align: center;"><IMG SRC="images/nothing.jpg" ALT="Logo" style="width:668px;height:264px;"></div>
+
 
 
 </body>
