--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-<h1>A website about nothing?</h1>
-<div style="text-align: center;"><IMG SRC="images/nothing.jpg" ALT="Logo" style="width:668px;height:264px;"></div>
+	<h1>A website about nothing?</h1>
+	<div style="text-align: center;"><IMG SRC="images/nothing.jpg" ALT="Logo" style="width:668px;height:264px;"></div>
+	<h2>Nothing</h2>
 
-
-
+		
 </body>
 </html>
 
