--- a/about.html
+++ b/about.html
@@ -7,13 +7,13 @@
 
 <body>
 	<h1>Options</h1>
-	<a href="https://tripbook.softvoyage.com/my-trip/f5393d9c9786ca2718d78be8a7b587a7">Option 1 $615</a>
-	<a href="https://tripbook.softvoyage.com/my-trip/c37544b37a2204052fd7222b04cf0e79">Option 2 $635</a>
-	<a href="https://tripbook.softvoyage.com/my-trip/4a61192e2f7f195a5fb3864d430befe2">Option 3 $585</a>
-	<a href="https://tripbook.softvoyage.com/my-trip/4482546ce3ed76f56609268d587850c6">Option 4 $685</a>
-	<a href="https://tripbook.softvoyage.com/my-trip/a6973651f5fd85e2c48572dfa7c067d7">Option 5 $705</a>
-	<a href="https://tripbook.softvoyage.com/my-trip/3f773ea9941165dc54cb1c24d7ba4065">Option 6 $675</a>
-	<a href="https://tripbook.softvoyage.com/my-trip/f7405403b11b31fdb794509ca7e81a37">Option 7 $705</a>
+	<a href="https://tripbook.softvoyage.com/my-trip/f5393d9c9786ca2718d78be8a7b587a7">Option 1 $615</a><hr>
+	<a href="https://tripbook.softvoyage.com/my-trip/c37544b37a2204052fd7222b04cf0e79">Option 2 $635</a><hr>
+	<a href="https://tripbook.softvoyage.com/my-trip/4a61192e2f7f195a5fb3864d430befe2">Option 3 $585</a><hr>
+	<a href="https://tripbook.softvoyage.com/my-trip/4482546ce3ed76f56609268d587850c6">Option 4 $685</a><hr>
+	<a href="https://tripbook.softvoyage.com/my-trip/a6973651f5fd85e2c48572dfa7c067d7">Option 5 $705</a><hr>
+	<a href="https://tripbook.softvoyage.com/my-trip/3f773ea9941165dc54cb1c24d7ba4065">Option 6 $675</a><hr>
+	<a href="https://tripbook.softvoyage.com/my-trip/f7405403b11b31fdb794509ca7e81a37">Option 7 $705</a><hr>
 
 
 		
