--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 	<a href="https://tripbook.softvoyage.com/my-trip/3f773ea9941165dc54cb1c24d7ba4065">Option 5 $675</a>
 	<hr>
 
-	<div style="text-align: center;"><IMG SRC="images/options.JPG" ALT="Logo" style="width:668px;height:264px;"></div>
+	<div style="text-align: center;"><IMG SRC="images/options.JPG"></div>
 
 
 		
