--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 	<hr>
 	<a href="https://tripbook.softvoyage.com/my-trip/4a61192e2f7f195a5fb3864d430befe2">Option 2 $585</a>
 
-
+	<h2>Both options depart November 23 @ 10:00am, and return November 27 @ 6:00pm
 
 		
 </body>
