--- a/about.html
+++ b/about.html
@@ -6,12 +6,11 @@
 </head>
 
 <body>
-	<h1>Options</h1>
-	<a href="https://tripbook.softvoyage.com/my-trip/c37544b37a2204052fd7222b04cf0e79">Option 1 $635</a>
-	<hr>
-	<a href="https://tripbook.softvoyage.com/my-trip/4a61192e2f7f195a5fb3864d430befe2">Option 2 $585</a>
+	<h1>BWV's BIG WET BIRTHDAY / SWEET TRIP FOR THE BOYS</h1>
+	
+	<a href="https://tripbook.softvoyage.com/my-trip/f5393d9c9786ca2718d78be8a7b587a7">Option 1 $615</a><hr>
 
-	<h2>Both options depart November 23 @ 10:00am, and return November 27 @ 6:00pm
+	<h2>Depart November 23 @ 10:00am, and return November 27 @ 6:00pm
 
 		
 </body>
