--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<h1>A website about nothing?</h1>
 	<div style="text-align: center;"><IMG SRC="images/nothing.jpg" ALT="Logo" style="width:668px;height:264px;"></div>
 	<h2>Nothing</h2>
+		<p> Update this <strong>later</strong></p>
 		
 </body>
 </html>
