--- a/index.html
+++ b/index.html
@@ -2,13 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="/css/site.css">
-  <title>A site about nothing</title>
-</head>
-
-<body>
-	<h1>A website about nothing?</h1>
-	<div style="text-align: center;"><IMG SRC="images/nothing.jpg" ALT="Logo" style="width:668px;height:264px;"></div>
-	<h2>Nothing</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/L-DmBbUKDMo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		
 </body>
 </html>
