--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     
     <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/EZ2RvMJdKKA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/CBiYoFYlwxE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
     
 </body>
