--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<title>Bird Watchers Anonymous</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet"> 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119837600-1"></script>
 	<script>
@@ -25,6 +27,10 @@
     <div class="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/59sGT4VQPEk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
+	
+	<div class="header">
+		<h2>Am I the only person who watches this? If the answer is yes, i'd rather not know. Lie to me</h2>
+	</div>
     
 </body>
 </html>
