--- a/about.html
+++ b/about.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
-  <link rel="stylesheet" href="/css/site.css">
-  <title>A site about nothing</title>
+
 </head>
 
 <body>
-	<h1>BWV's BIG WET BIRTHDAY / SWEET TRIP FOR THE BOYS</h1>
-	
-	<a href="https://tripbook.softvoyage.com/my-trip/f5393d9c9786ca2718d78be8a7b587a7">Option 1 $615</a><hr>
 
-	<h2>Depart November 23 @ 10:00am, and return November 27 @ 6:00pm
+    <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/9tWNkW5S2Kg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
 
-		
 </body>
 </html>
-
