--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
 
 <body>
 
-    <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/9tWNkW5S2Kg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <div class="video"> 
+        <h1>Nothing here :)</h1>
     </div>
 
 </body>
