--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </div>
     
     <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/TkpKIxuzXEg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/K2N2_Q2JD4M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 	
 	<div class="header">
-		<h2>Am I the only person who watches this? If the answer is yes, i'd rather not know. Lie to me</h2>
+		<h2>Am I the only person who watches this?</h2>
 	</div>
     
 </body>
