--- a/thing.html
+++ b/thing.html
@@ -6,6 +6,7 @@
 <body>
     <div class="video">
         <h1>:?</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/-LhWfSyOqYM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 </body>
 
