--- a/thing.html
+++ b/thing.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="video">
-        <h1><3</h1>
+        <h1>Leaving in a few min</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/aF0VG8BoTu8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 </body>
