--- a/thing.html
+++ b/thing.html
@@ -5,6 +5,11 @@
 </head>
 <body>
     <div class="video">
+        <p>I think that I'll keep loving you, way past sixty-five</p>
+        <p>We made a language for us two, we don't need to describe</p>
+        <p>Everytime you call on me, I drop what I do</p>
+        <p>You are my best friend</p>
+        <p><3<3<3<3<3<3<3<3</p>
                
     </div>
 </body>
