--- a/thing.html
+++ b/thing.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html>
@@ -5,7 +6,7 @@
 </head>
 <body>
     <div class="video">
-        <h1>:?</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/9xvoeY7Ho4k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 </body>
 
