--- a/thing.html
+++ b/thing.html
@@ -8,6 +8,7 @@
 <body>
     <div class="video">
         <h1><3</h1>
+            <a href="https://www.azlyrics.com/lyrics/colbiecaillat/inevertoldyou.html">Today</a>
     </div>
 </body>
 
