--- a/thing.html
+++ b/thing.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Mw1tfp3s8yo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/hYo3-ncKBBY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 </body>
 
