--- a/thing.html
+++ b/thing.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/hYo3-ncKBBY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <div class="video"> 
+        <h1>Let me know</h1>
     </div>
 </body>
 
