--- a/thing.html
+++ b/thing.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="video"> 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/XWMry6JkM6c" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 </body>
 
