--- a/thing.html
+++ b/thing.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="video"> 
-        <h1><3</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VEgjqRKR8GI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 </body>
 
