--- a/thing.html
+++ b/thing.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="video"> 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/3Jja3oGpzX8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     
 </body>
