--- a/temp.html
+++ b/temp.html
@@ -5,8 +5,8 @@
 <head>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,700,900" rel="stylesheet">
-  <link rel="stylesheet" href="styles/libs/bootstrap/bootstrap.processed.min.css">
-  <link rel="stylesheet" href="styles/style.processed.min.css">
+  <link rel="stylesheet" href="bootstrap.processed.min.css">
+  <link rel="stylesheet" href="style.processed.min.css">
 
 </head>
 
