--- a/temp.html
+++ b/temp.html
@@ -17,7 +17,7 @@
         <div class="card">
           <div class="card-block">
             <h4 class="card-title">Sharefile</h4>
-            <p class="card-text">Click below to access the MP# archive</p>
+            <p class="card-text">Click below to access the MP3 archive</p>
             <a href="https://therevealedwordtabernacle.sharefile.com/Authentication/Login" class="btn btn-primary" target="_blank">MP3</a>
           </div>
         </div>
