--- a/temp.html
+++ b/temp.html
@@ -11,6 +11,36 @@
 </head>
 
 <body>
+  
+  <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#">RWT</a>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <header class="site-header py-5 mb-4">
+    <div class="container">
+      <h1 class="display-4">The Revealed Word Tabernacle</h1><br/>
+      <p class="lead">“To him that overcometh will I grant to sit with me in my throne, even as I also overcame, and am set down with my Father in his throne.”</p>
+    </div>
+  </header>
+
+  <div class="container">
+
+    <p>The Revealed Word Tabernacle is located in Hanover Ontario, CANADA. We are a small assembly pastored by Bro.Dan R. Olsen that believes God sent a prophet in this the final church age. Bro. William Marrion Branham was that prophet vindicated by the
+      Holy Spirit and sent to bring a message of redemption to the elect Lady, The Bride of Christ.</p>
 
 <div class="row">
       <div class="col">
