--- a/temp.html
+++ b/temp.html
@@ -63,7 +63,7 @@
           <div class="card-block">
             <h4 class="card-title">Archive Video</h4>
             <p class="card-text">Click below to access the video archive</p>
-            <a href="https://therevealedwordtabernacle.vids.io/" class="btn btn-primary" target="_blank">Archive Video</a>
+            <a href="https://temprwt.vids.io/" class="btn btn-primary" target="_blank">Archive Video</a>
           </div>
         </div>
       </div>
