--- a/rwt.html
+++ b/rwt.html
@@ -116,7 +116,7 @@
 
             <h4 class="card-title">Sharefile</h4>
 
-            <p class="card-text">Click below to access the MP# archive</p>
+            <p class="card-text">Click below to access the MP3 archive</p>
 
             <a href="https://therevealedwordtabernacle.sharefile.com/Authentication/Login" class="btn btn-primary" target="_blank">MP3</a>
 
