--- a/rwt.html
+++ b/rwt.html
@@ -70,7 +70,7 @@
 
         <li class="nav-item">
 
-          <a class="nav-link" href="rwt/contact.html">Contact</a>
+          <a class="nav-link" href="/contact.html">Contact</a>
 
         </li>
 
