--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
 
 
 
- 
+ <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8094.106911133843!2d-80.93741885842282!3d44.172064304795526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88298599e332a35f%3A0x60581debb536611d!2sRevealed%20Word%20Tabernacle!5e0!3m2!1sen!2sca!4v1587924071401!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
 
 
