--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
 
 
 
-    <p>The Revealed Word Tabernacle is located i</p>
+    <p>Please email rwtlive@gmail.com if you require information</p>
 
 
 
