--- a/thing.html
+++ b/thing.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <p>http://findmymobile.samsung.com</p>
-    <p>ryanvisser@live.ca</p>
-    <p>Yru</p>
+    <h2>http://findmymobile.samsung.com</h2>
+    <h2>ryanvisser@live.ca</h2>
+    <h2>Yru</h2>
     </div>
 
 </body>
