--- a/thing.html
+++ b/thing.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h2>http://findmymobile.samsung.com</h2>
+    <h2><a href="http://findmymobile.samsung.com">Find My Mobile</a></h2>
     <h2>ryanvisser@live.ca</h2>
     <h2>Yru</h2>
     </div>
