--- a/thing.html
+++ b/thing.html
@@ -7,7 +7,7 @@
 <body>
     <h2><a href="http://findmymobile.samsung.com">Find My Mobile</a></h2>
     <h2>ryanvisser@live.ca</h2>
-    <h2>Y</h2>
+    <h2>working on it</h2>
     </div>
 
 </body>
