--- a/thing.html
+++ b/thing.html
@@ -7,7 +7,8 @@
 <body>
     <h2><a href="http://findmymobile.samsung.com">Find My Mobile</a></h2>
     <h2>ryanvisser@live.ca</h2>
-    <h2>working on it</h2>
+    <h2>Doesn't want to update when I'm at work, phones in the car and possibly battery saver is killing the process. Working on it</h2>
+
     </div>
 
 </body>
