--- a/thing.html
+++ b/thing.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2><a href="http://findmymobile.samsung.com">Find My Mobile</a></h2>
-    <h2><a href="https://maps.app.goo.gl/pPQXMPgCzuVVMZYd7">Other</a></h2>
+    <h2><a href="https://maps.app.goo.gl/pPQXMPgCzuVVMZYd7">Google</a></h2>
 
     </div>
 
