--- a/thing.html
+++ b/thing.html
@@ -3,6 +3,14 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119837600-1"></script>
+	<script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
+	gtag('config', 'UA-119837600-1');
+	</script>
 </head>
 <body>
     <h2><a href="http://findmymobile.samsung.com">Find My Mobile</a></h2>
