--- a/thing.html
+++ b/thing.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h2><a href="http://findmymobile.samsung.com">Find My Mobile</a></h2>
-    <h2><a href="https://maps.app.goo.gl/p8X2Y4hiLF8XCuuX9">Google fixed</a></h2>
+    <h2><a href="https://maps.app.goo.gl/uaNbELAHK2NTh1KF9">Google</a></h2>
 
     </div>
 
