--- a/thing.html
+++ b/thing.html
@@ -15,7 +15,7 @@
 <body>
     <h2><a href="http://findmymobile.samsung.com">Find My Mobile</a></h2>
     <h2><a href="https://maps.app.goo.gl/uaNbELAHK2NTh1KF9">Google</a></h2>
-    <H2>link has expired or this person is no longer sharing their location</h2>
+    <H2>expired</h2>
     </div>
 
 </body>
