--- a/thing.html
+++ b/thing.html
@@ -13,8 +13,8 @@
 	</script>
 </head>
 <body>
-    <!h2><a href="http://findmymobile.samsung.com">Find My Mobile</a></h2>
-    <!h2><a href="https://maps.app.goo.gl/uaNbELAHK2NTh1KF9">Google</a></h2>
+    <!h2><!a href="http://findmymobile.samsung.com">Find My Mobile</a></h2>
+    <!h2><!a href="https://maps.app.goo.gl/uaNbELAHK2NTh1KF9">Google</a></h2>
     
     </div>
 
